force-app/main/default/objects/Data_Ai_Customer__c/Data_Ai_Customer__c.object-meta.xml
<CustomObject>
    <description>List of Domains that is considered a Data.AI Customer. We map and &quot;mark&quot; Accounts with the same Domain as a Data.AI customer - MIS - 2078

The list of Domains is updated from the shared Google Sheet. We use Workato to update Salesforce.</description>
    <label>Data.Ai Customer</label>
    <nameField>
        <displayFormat>AI-{0000}</displayFormat>
        <label>Data.Ai Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data.Ai Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>