force-app/main/default/objects/Data_Ai_Customer__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this record exists in the Data.Ai Customers Google sheet</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>