force-app/main/default/objects/Data_Ai_Customer__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <label>Billing Country</label>
    <type>TextArea</type>
</CustomField>