force-app/main/default/objects/Data_Ai_Customer__c/fields/Data_ai_Master_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_ai_Master_Key__c</fullName>
    <formula>IF(
ISBLANK(Domain__c) || ISBLANK(Billing_Country__c) || ISBLANK(Shipping_Country__c),&quot;&quot;,
Domain__c+&quot;_&quot;+Billing_Country__c+&quot;_&quot;+Shipping_Country__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data.ai Master Key</label>
    <type>Text</type>
</CustomField>