force-app/main/default/objects/Data_Ai_Customer__c/fields/Data_Ai_Shipping_Country_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Ai_Shipping_Country_Key__c</fullName>
    <formula>IF(NOT(ISBLANK(Shipping_Country__c)),
Domain__c+&quot;_&quot;+Shipping_Country__c,&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data.Ai Shipping Country Key</label>
    <type>Text</type>
</CustomField>