force-app/main/default/objects/Data_Ai_Customer__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Domain that is considered a Data.AI Customer. We map and &quot;mark&quot; Accounts with the same Domain as a Data.AI customer - MIS - 2078</description>
    <label>Domain</label>
    <type>TextArea</type>
</CustomField>