force-app/main/default/objects/Data_Ai_Customer__c/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <label>Shipping Country</label>
    <type>TextArea</type>
</CustomField>