force-app/main/default/objects/Data_Ai_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Domain__c</columns>
    <columns>Billing_Country__c</columns>
    <columns>Shipping_Country__c</columns>
    <columns>Data_ai_Master_Key__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>